welcome.lessons.welcome.array.array667.Array667.scala.error
array667:3: error: value lentgh is not a member of Array[Int]
  for (i<-1 to nums.lentgh -1) {
                    ^