welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var c=0
  for (i<-1 to nums.lentgh -1) {
    if (nums(i-1)==6 && (nums(i)==6 || nums(i)==7)) {
      c=c+1
    }
  }
  return c
}